--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.553.0",
     "next": "^15.1.6",
+    "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
     "react-day-picker": "9.8.0",
     "react-dom": "^19.0.0",
